--- a/concepts/scalability-integration/platform-portability.mdx
+++ b/concepts/scalability-integration/platform-portability.mdx
@@ -1,221 +1,180 @@
 ---
 title: "Platform Portability and Compatibility"
-description: "Review how GoogleTest abstracts OS/platform differences and enforces compatibility, enabling consistent operation across compilers, standards, and environments. Learn what low-level mechanisms facilitate extensibility and cross-platform success."
+description: "See how portability layers abstract away compiler, platform, and architecture differences, ensuring broad compatibility across diverse environments and seamless integration into various toolchains."
 ---
 
 # Platform Portability and Compatibility
 
-GoogleTest (and its companion GoogleMock) are designed to run consistently and reliably across a wide variety of platforms, compilers, and environments. This page explains how GoogleTest abstracts away the differences between operating systems and compilers, ensuring that your tests remain portable and compatible regardless of your development or target environment.
+Ensure your tests run reliably across the wide spectrum of compilers, operating systems, and hardware architectures with GoogleTest's robust portability layers. This page explains how GoogleTest abstracts environment differences, providing seamless compatibility and integration into diverse toolchains.
 
 ---
 
-## Understanding Platform Portability in GoogleTest
+## Why Portability Matters
 
-### Why Portability Matters
+Testing frameworks must operate consistently on different platforms — from Linux servers to Windows desktops, macOS workstations, and embedded systems — each with their unique compilers and runtimes. GoogleTest’s portability layers let you write platform-neutral tests that "just work," eliminating the headaches of platform-specific bugs and build issues.
 
-Imagine you are writing tests for cross-platform C++ code that must work seamlessly on Linux, Windows, macOS, and even embedded systems. Variations in OS-level APIs, threading libraries, compiler features, and language standards could easily break your tests or force you to write platform-specific code. GoogleTest minimizes this burden through careful abstraction layers, enabling you to focus on writing tests rather than wrestling with platform quirks.
-
-### Platform-Neutral Operation
-
-GoogleTest detects the operating system and environment during compilation and adapts accordingly. It supports:
-
-- Multiple operating systems, including Windows (Desktop and variations), Linux, macOS, FreeBSD, OpenBSD, QNX, Solaris, Fuchsia, and others.
-- Different compilers and language features, with a baseline requirement of C++17.
-- Threading support, with abstraction over pthreads and Windows threads.
-- Environment-specific capabilities like file system access, regular expressions, and exception handling.
-
-### Detection Macros
-
-GoogleTest internally defines macros indicating the compilation platform, such as:
-
-- `GTEST_OS_WINDOWS`
-- `GTEST_OS_LINUX`
-- `GTEST_OS_MAC`
-- `GTEST_OS_FREEBSD`
-- `GTEST_OS_QNX`
-
-These allow conditional compilation within GoogleTest itself and enable customizing or extending portability where needed.
+Imagine you have a large product with code that must compile and run on Windows, Linux, and macOS to meet customer needs. GoogleTest ensures your tests can run unchanged on all these targets, so you focus on quality without rewriting or patching tests for each environment.
 
 
-## Core Compatibility Mechanisms
+## How Portability Layers Work
 
-### Abstraction Headers (`gtest-port.h` and `gmock-port.h`)
+At its core, GoogleTest contains a set of abstractions and macros that detect and adapt to differences in OSes, compilers, and system libraries. These portability layers provide consistent APIs for threading, logging, file I/O, and other low-level functionality.
 
-GoogleTest and GoogleMock place their platform abstraction logic primarily in internal headers like `gtest-port.h` and `gmock-port.h`. These headers handle:
+By including internal headers that detect your environment, GoogleTest configures itself dynamically to fit your platform:
 
-- Defining platform-specific features and environment capabilities.
-- Declaring synchronization primitives: mutexes, locks, thread-local storage compatible across platforms.
-- Providing wrappers for system calls with differing implementations, e.g., file operations and error handling.
-- Managing symbol visibility and exporting API symbols consistently.
+- **Compiler and C++ standard support** detection
+- **Operating system identification** (Windows, macOS, Linux, BSD variants, embedded OSes, etc.)
+- **Threading primitives** abstraction (mutexes, notifications) via platform-specific or pthread implementations
+- **File system and path separator handling**
+- **Feature flags for available system capabilities** (exceptions, RTTI, POSIX regex)
 
-##### Customization Points
+These layers eliminate platform-specific #ifdef tangles by centralizing environment detection and adaptation.
 
-In addition, users can extend or override certain macros via the customization directories (`custom/gtest-port.h` and `custom/gmock-port.h`). This helps adapt GoogleTest to unusual or unsupported environments by defining custom implementations for features like threading, logging, or temporary directories.
 
-### Compiler and Language Standard Support
+## Typical User Workflow
 
-GoogleTest requires **at least C++17 support**. It also:
+1. **Write tests once** using GoogleTest’s C++ APIs without worrying about platform differences.
 
-- Detects whether RTTI and exception support are enabled, adjusting internal code accordingly.
-- Supports compilers including MSVC (Visual Studio 2015 and later), GCC, Clang, and several specialized toolchains.
-- Provides options to disable or enable exceptions, RTTI, and other features for embedded or constrained systems.
+2. **Build your tests** with the standard build script (CMake, Bazel, or manual) on each supported platform.
 
-### Threading and Synchronization
+3. **Run tests natively** on each environment. GoogleTest internally handles platform-specific details like file paths, threading, and logging.
 
-GoogleTest abstracts threading and synchronization primitives:
+4. **Control configuration and overrides** (for example, defining macros) if necessary, to customize GoogleTest’s behavior for niche or constrained platforms.
 
-- Uses **pthread** on POSIX systems when available.
-- Uses native Windows threading primitives on Windows.
-- Provides internal `Mutex`, `MutexLock`, and `ThreadLocal` abstractions that behave consistently across platforms.
-- Detects and adapts to platforms lacking threading support, providing dummy implementations where necessary.
 
-## Flag and Logging Portability
+## Key Components in Portability
 
-GoogleMock integrates with GoogleTest's portability layer and builds on top of Abseil's flag system when available. Flags are defined using macros that adapt to the environment:
+### Platform Detection Macros
+GoogleTest uses macros defined in `gtest-port-arch.h` to identify the compilation platform. For example, `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`, and `GTEST_OS_MAC` among others, detect your OS automatically.
+
+### Synchronization Primitives
+GoogleTest abstracts mutexes and thread-local storage to ensure thread-safe test execution:
+
+- On platforms supporting pthreads, it uses native `pthread_mutex_t` and `pthread_key_t`.
+- On Windows, it leverages native critical sections and fibers.
+- For other or embedded systems, dummy implementations ensure compatibility even if threading is not available.
+
+Developers seamlessly write thread-safe tests without explicit threading code.
+
+### Feature Flags for Environment Capabilities
+Macros like `GTEST_HAS_EXCEPTIONS`, `GTEST_HAS_RTTI`, and `GTEST_HAS_PTHREAD` indicate availability of exceptions, runtime type information, and pthreads respectively. GoogleTest optimizes its internal logic accordingly.
+
+### Logging and Port-Specific Utilities
+Platform-abstracted logging (`GTEST_LOG_`) and file handling utilities ensure consistent diagnostic outputs and correct behavior for paths and file operations.
+
+### User Customization Points
+Some macros and hooks allow power users to override default implementations to better integrate GoogleTest with custom platforms or toolchains, as documented in the [Customization Points](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/custom/README.md).
+
+
+## Practical Examples
+
+### Detecting Platform in Tests
+GoogleTest internally evaluates platform via `GTEST_OS_*` macros. You generally do not need to manipulate these, but if required, here is how they operate implicitly:
 
 ```cpp
-// Example macros for defining flags in gmock-port.h
-#define GMOCK_DEFINE_bool_(name, default_val, doc) \
-  ABSL_FLAG(bool, gmock_##name, default_val, doc)
+#ifdef GTEST_OS_WINDOWS
+  // Windows-specific support is activated
+#elif defined(GTEST_OS_LINUX)
+  // Linux-specific support
+#endif
 ```
 
-If Abseil is not present, GoogleMock mimics flag storage with plain global variables ensuring compatibility.
+### Forcing Threading Support
+If GoogleTest does not recognize your platform’s pthread availability automatically, you can explicitly enable or disable pthread support by passing compiler flags:
 
-Similarly, logging macros are abstracted to work across platforms. Users can supply custom logging implementations if desired, especially on embedded or highly customized platforms.
-
-## Handling Platform-Specific Limitations and Failures
-
-### Known Limitations
-
-Some platforms or compiler configurations may have limitations. For example:
-
-- Thread safety is limited or unavailable on some systems.
-- Certain embedded platforms might lack full file system support, affecting features like death tests or output capturing.
-- Stream redirection capabilities vary, which can alter test output capture behavior.
-
-GoogleTest provides compile-time and runtime detection of such capabilities, gracefully disabling unsupported features.
-
-### Avoiding Platform-Specific Failures
-
-Best practices for ensuring portability:
-
-- Avoid relying on platform-specific features unless guarded by feature detection macros.
-- Use GoogleTest's provided abstractions and APIs rather than direct OS calls.
-- Extend or override portability macros only when necessary.
-- Regularly test your test suite on all target platforms.
-
-## Building and Integration Considerations
-
-GoogleTest provides extensive support for building with tools like CMake and Bazel, which respect platform differences:
-
-- Compiler flags and link options are set based on the detected platform.
-- On Windows, special attention is given to runtime library linkage (static vs dynamic CRT).
-- Platform-specific dependencies such as pthreads or Windows threading are linked automatically as needed.
-
-Example CMake snippet for Windows runtime linkage adjustment:
-
-```cmake
-if (MSVC AND NOT BUILD_SHARED_LIBS)
-  string(REPLACE "/MD" "-MT" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-endif()
+```bash
+g++ -DGTEST_HAS_PTHREAD=1 ...
 ```
 
-This ensures that tests built on Windows work without runtime conflicts.
+This helps in custom environments where detection might fail.
 
-## Summary Diagram of Portability Layer
+### Building Shared Libraries on Windows
+To build GoogleTest as a DLL and ensure runtime compatibility with your project, use these definitions:
+
+```bash
+g++ -DGTEST_CREATE_SHARED_LIBRARY=1 ...  # for GoogleTest build
+
+g++ -DGTEST_LINKED_AS_SHARED_LIBRARY=1 ...  # for your tests using GoogleTest DLL
+```
+
+
+## Tips and Best Practices
+
+- **Always specify the C++ standard version C++17 or later** as this is required by GoogleTest’s portability layer.
+- **Let GoogleTest detect your platform automatically**, only override with macros if you face unusual platform constraints.
+- **Use the official CMake scripts or Bazel build files**, which contain platform-specific build tweaks and flags to maximize portability.
+- **Check the logs and build output for portability warnings or failures**, which often show the need for macro adjustments or patches.
+
+
+## Common Pitfalls
+
+- **Mismatched runtime libraries on Windows** causing linker errors — fixable with `gtest_force_shared_crt` CMake option.
+- **Incorrect threading detection leading to build failures** — resolve by manually passing `-DGTEST_HAS_PTHREAD` flags.
+- **Macro name clashes** when using GoogleTest with other libraries — can be solved by renaming conflicting macros using provided `GTEST_DONT_DEFINE_FOO` macros.
+
+
+## Related Header Files for Portability
+
+- `gtest/internal/gtest-port.h`: Core portability utilities, macros for environment, threading, logging.
+- `gtest/internal/gtest-port-arch.h`: Platform detection macros for OS and architecture.
+- `gtest/internal/custom/gtest-port.h`: User-customizable overrides for platform-specific features.
+
+
+## Summary
+
+GoogleTest’s portability and compatibility layers shield you from the complexity of writing tests that must work flawlessly across many environments. By handling platform detection, synchronization primitives, feature flags, and platform-specific behaviors internally, GoogleTest lets you write test code that runs consistently everywhere.
+
+
+---
+
+## Visual Overview: Portability Layer Interaction
 
 ```mermaid
-flowchart TD
-  subgraph "Platform Abstraction Layer"
-    OS_Detect["OS/Platform Detection Macros"]
-    Sync_Primitives["Synchronization Primitives (Mutex, ThreadLocal)"]
-    File_Operations["File and I/O Wrappers"]
-    Env_Variables["Environment Variable Handling"]
-    Flags_and_Logging["Flags & Logging Abstractions"]
-    Compiler_Features["Compiler & Language Feature Detection"]
+graph TD
+  subgraph Platform Detection
+    PT[gtest-port-arch.h
+(GTEST_OS_* Macros)]
   end
 
-  OS_Detect --> Sync_Primitives
-  OS_Detect --> File_Operations
-  OS_Detect --> Env_Variables
-  OS_Detect --> Flags_and_Logging
-  OS_Detect --> Compiler_Features
+  subgraph Core Portability
+    PP[gtest-port.h
+(Feature flags,
+Threading primitives)]
+    PC[Custom overrides
+(gtest-port.h custom/)]
+  end
 
-  Sync_Primitives --> GoogleTest["GoogleTest Core & Test Runner"]
-  File_Operations --> GoogleTest
-  Env_Variables --> GoogleTest
-  Flags_and_Logging --> GoogleMock["GoogleMock & Testing Tools"]
-  Compiler_Features --> GoogleTest
-
-  GoogleTest --> UserTests["User Test Code"]
-  GoogleMock --> UserMocks["User Mock Classes"]
-
+  PT --> PP
+  PC --> PP
+  PP -->|Provides| Tests[Your Test Code]
+  PT -->|Informs| Tests
   
-  classDef layer fill:#eef,stroke:#66f,stroke-width:1px;
-  class Platform_Abstraction_Layer layer;
+  subgraph Environment
+    OS[Operating System]
+    Compiler[Compiler]
+    ThreadLib[Thread Library]
+  end
+
+  OS --> PT
+  Compiler --> PT
+  ThreadLib --> PP
+
+  style Tests fill:#f3f4f6,stroke:#3b82f6,stroke-width:2px,rounded
+  style PP fill:#dbeafe,stroke:#2563eb,stroke-width:2px
+  style PT fill:#dbeafe,stroke:#2563eb,stroke-width:2px
+  style PC fill:#dbf4ff,stroke:#60a5fa,stroke-width:1.5px,stroke-dasharray: 4 2
 ```
 
-This diagram illustrates that GoogleTest's core internal layer adapts testing functionality based on platform detection and abstracts essential OS, compiler, and environment differences.
 
 ---
 
-## Practical Tips for Leveraging Platform Portability
+## Additional Resources
 
-- **Write tests agnostic of platform features:** Use GoogleTest APIs without embedding direct OS calls.
-- **Leverage Customization Points:** If targeting unique platforms, extend portability macros in the `custom` headers.
-- **Check feature macros:** Use GoogleTest's feature macros (e.g., `GTEST_HAS_PTHREAD`) to conditionally compile platform-specific tests.
-- **Test across platforms:** Validate your test suite on all deployment platforms to detect portability issues early.
-
----
-
-## Troubleshooting Common Portability Issues
-
-### 1. Tests Fail to Compile on a Certain Platform
-
-- Verify that your compiler supports C++17 as required.
-- Check if any macros in `custom/gtest-port.h` or `custom/gmock-port.h` need adjustments.
-- Ensure threading flags (`GTEST_HAS_PTHREAD`) and environment variables are correctly set.
-
-### 2. Thread Safety Not Working or Tests Flake Under Concurrency
-
-- Confirm that your platform supports threading as GoogleTest requires (`GTEST_IS_THREADSAFE` macro).
-- On Windows, verify correct CRT linkage (static vs dynamic).
-
-### 3. Flags or Logging Do Not Behave as Expected
-
-- If using Abseil flags, ensure Abseil dependencies are included.
-- If on a minimal platform, consider customizing flag macros to suit your runtime.
-
-### 4. File System or I/O Redirection Fails
-
-- Check `GTEST_HAS_FILE_SYSTEM` and `GTEST_HAS_STREAM_REDIRECTION` macros.
-- Avoid tests that depend on file I/O in restricted environments.
-
----
-
-## Related Documentation
-
-- [GoogleTest Primer](docs/primer.md) — Introduction and test writing basics.
-- [Portability and Internal Utilities](api-reference/advanced-customization/portability-internals.mdx) — More on low-level compatibility.
-- [System Architecture Overview](concepts/core-architecture/system-overview.mdx) — How components interact including portability layer.
-- [Supported Platforms](docs/platforms.md) — List of officially supported OSes and compilers.
-- [GoogleTest Build & Installation Guides (CMake, Bazel)](googletest/README.md) — Platform-aware build integration.
-- [Customization Points](googletest/include/gtest/internal/custom/README.md) — How to extend portability support.
-
----
-
-## Conclusion
-
-GoogleTest’s detailed internal abstractions and compile-time detection of platform capabilities ensure your C++ tests are portable, reliable, and consistent across a wide range of operating systems and compilers. Understanding these layers empowers you to write tests once and run them anywhere, unlocking seamless cross-platform testing workflows and boosting development confidence.
+- [Customization Points](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/custom/README.md) — How to override platform feature defaults.
+- [Supported Platforms & Requirements](https://docs/overview/adoption-and-integration/supported-platforms-and-requirements.mdx) — For high-level supported OS and compiler info.
+- [Installation (Bazel, CMake, Manual)](https://docs/getting-started/setup-basics/installation-methods.mdx) — Build system integration for maximum portability.
 
 
 ---
 
-<Check>
-To maximize portability, always keep your tests platform agnostic and leverage GoogleTest’s abstraction layers and customization macros. Validate your setup regularly on all target platforms to catch any compatibility gaps early.
-</Check>
-
-<Info>
-Explore the `custom` directory headers if your platform needs special adaptations beyond the standard environment assumptions.
-</Info>
-
+For detailed insights into GoogleTest’s internal portability implementation, please refer to the `gtest-port.h` and `gtest-port-arch.h` headers within the GoogleTest repository.
