--- a/concepts/scalability-integration/integration-patterns.mdx
+++ b/concepts/scalability-integration/integration-patterns.mdx
@@ -1,184 +1,228 @@
 ---
-title: "Integration Patterns & System Compatibility"
-description: "Describes how GoogleTest and GoogleMock fit into different build systems (CMake, Bazel), CI pipelines, and support cross-platform workflows. Highlights integration hooks and environment configuration options."
+title: "Integration Patterns and Ecosystem Interoperability"
+description: "Understand how GoogleTest fits into modern C++ build, CI/CD, and tool ecosystems. Explore common integration workflows with build systems and third-party tools, and how the design guarantees reliability at scale."
 ---
 
-# Integration Patterns & System Compatibility
+# Integration Patterns and Ecosystem Interoperability
 
-GoogleTest and GoogleMock are designed to integrate seamlessly into a variety of build systems and continuous integration (CI) pipelines, supporting workflows across multiple platforms. This guide explains how these frameworks fit into popular build environments like CMake and Bazel, outlines integration hooks, and covers environment configuration options to ensure smooth and reliable testing.
+GoogleTest is more than a standalone testing library: it is designed to integrate seamlessly into modern C++ build, continuous integration (CI/CD), and tool ecosystems. This guide explains how GoogleTest fits into these workflows, detailing common integration patterns with build systems and other tooling, along with the design choices that ensure reliability and scalability in large environments.
 
 ---
 
-## Integration with Build Systems
+## How GoogleTest Integrates Into Your Build System
 
-### CMake
+GoogleTest supports various mechanisms for integration into your project’s build process, aiming for easy adoption without sacrificing flexibility.
 
-GoogleTest and GoogleMock provide dedicated support for CMake, the de facto standard for cross-platform C++ build configuration.
+### Using GoogleTest with CMake
 
-- **FetchContent & ExternalProject:** You can incorporate the googletest and googlemock sources directly through CMake's `FetchContent` or `ExternalProject` modules. This eliminates the need for manual downloads or separate installation steps.
-- **Targets:** The project exports targets such as `gtest`, `gtest_main`, `gmock`, and `gmock_main` that can be linked into your tests.
-- **Customization:** Various CMake options allow customizing compilation flags, enabling or disabling building of tests, and controlling installation.
+*GoogleTest ships with official CMake support*, enabling straightforward incorporation into CMake-based projects. You can either build GoogleTest as a standalone project and link against installed targets or embed it directly as part of your project build tree.
 
-**Example usage:**
+**Typical workflow with FetchContent**:
 
 ```cmake
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG main
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(MyTest test.cpp)
-target_link_libraries(MyTest gtest_main gmock_main)
+add_executable(my_test test_main.cpp)
+target_link_libraries(my_test gtest_main)
+add_test(NAME my_test COMMAND my_test)
 ```
 
-### Bazel
+This ensures consistent compiler flags and build options between GoogleTest and your code.
 
-Bazel users can integrate GoogleTest and GoogleMock via the official BUILD targets.
+### Other Build Systems
 
-- **Predefined Rules:** Bazel repositories often include `@com_google_googletest//:gtest` and `@com_google_googletest//:gmock` as accessible targets.
-- **Test Rules:** You can define `cc_test` rules that depend on gtest and gmock libraries to create unit tests.
-- **Cross-platform:** Bazel enforces hermetic builds and caching, enabling fast and reproducible test runs.
+GoogleTest can be integrated into other build systems such as Bazel manually by adding relevant workspace entries and linking against gtest targets. For manual or custom build systems, simply include GoogleTest headers and link to precompiled GoogleTest binaries or build the source as part of your build.
 
-**Example snippet:**
+<br>
 
-```bazel
-cc_test(
-  name = "my_test",
-  srcs = ["test.cpp"],
-  deps = ["@com_google_googletest//:gmock_main"],
-)
+<Tip>
+Refer to the guide on [Integrating with CMake and Bazel](../guides/test-automation-and-integration/integrating-with-build-systems) for detailed step-by-step instructions and troubleshooting.
+</Tip>
+
+---
+
+## Continuous Integration (CI) and Test Automation Workflows
+
+GoogleTest’s architecture and CLI flags are tailored to modern CI/CD environments where automated test execution, filtering, and reporting are essential.
+
+### Running Tests in CI
+
+You can control which tests run, their ordering, and output format with GoogleTest flags:
+
+- `--gtest_filter` to run a subset of tests.
+- `--gtest_output=xml:<file>` to generate reports consumable by CI dashboards.
+- `--gtest_repeat` and `--gtest_shuffle` for robustness testing.
+- `--gtest_shard_count` and `--gtest_test_shard_index` for test sharding.
+
+A typical CI pipeline sequence:
+
+1. Build your test binaries using your build system.
+2. Invoke the test binary with appropriate flags to run selected tests and generate XML reports.
+3. Publish reports and logs to your CI server.
+
+<br>
+
+<Steps>
+<Step title="Configure Test Selection and Output">
+Set up command-line flags like `--gtest_filter` for targeted testing and `--gtest_output=xml` for structured results.
+</Step>
+<Step title="Execute Tests">
+Run `./my_test_binary`; GoogleTest runs selected tests, sharding and repeating as configured.
+</Step>
+<Step title="Collect and Analyze Reports">
+CI parses XML reports, aggregates results, and displays summaries with links to logs and failing tests.
+</Step>
+</Steps>
+
+<Tip>
+The [Running Tests in CI](../guides/test-automation-and-integration/running-tests-in-ci) guide provides deeper insights and examples.
+</Tip>
+
+---
+
+## Interoperability with Third-Party Tools
+
+GoogleTest is designed to work smoothly with a range of tools across the C++ ecosystem.
+
+### IDE Support
+
+- **Visual Studio**: Integration via extensions and default support for test discovery and execution.
+- **VS Code**: GoogleTest extensions can discover and run tests, display in test explorers.
+- **CLion** and other JetBrains Tools: Native support for GoogleTest with test runners and output parsing.
+
+### Test Reporting and Format Support
+
+- GoogleTest natively supports XML output via `--gtest_output=xml`, fitting into standard CI reporting workflows.
+- It supports TAP listeners and can be extended with custom listeners via its event listening framework.
+
+### Test Filtering and Execution Control
+
+- GoogleTest supports granular filtering by test suite and test name.
+- Test sharding and parallel execution flags enable integration with distributed and parallel test runners like `gtest-parallel`.
+
+### Extensibility and Customization Points
+
+GoogleTest’s listener interfaces and internal helpers (see API references) allow advanced users to integrate with custom monitoring, logging, or analytics tools.
+
+<br>
+
+<Info>
+GoogleTest provides a robust, extensible event listener framework that enables integration with non-standard reporting systems and test harnesses.
+</Info>
+
+---
+
+## Reliability and Scalability at Scale
+
+GoogleTest’s multi-thread-safe architecture and design for test isolation ensure that tests remain reliable and scalable as test suites grow.
+
+### Thread Safety
+
+- GoogleTest is thread-safe on platforms with pthreads support.
+- The framework carefully coordinates test execution and result reporting for parallel or concurrent test runs.
+
+### Test Isolation
+
+- Each test runs in a fresh fixture instance.
+- Global test environments can be registered, with well-defined lifecycle hooks for setup and teardown.
+
+### Scalability Features
+
+- Test sharding divides tests across multiple worker nodes.
+- Repeat modes and randomized test ordering help detect flaky tests.
+
+### Interaction with GoogleMock
+
+- GoogleMock supports safe concurrent mock usage across threads when used according to documented rules.
+- Expectations and actions remain consistent and thread-safe.
+
+<br>
+
+<Note>
+The multi-threaded usage of GoogleMock is detailed in the [Using GoogleMock Effectively](../guides/mocking-and-advanced-testing/using-googlemock-effectively) guide.
+</Note>
+
+---
+
+## Summary Diagram of Integration Workflow
+
+```mermaid
+flowchart TD
+  Start([Start Build]) --> Configure[Configure Build System]
+  Configure --> FetchGTest[CMake FetchContent/google submodule]
+  FetchGTest --> Build[Test Project with GoogleTest]
+  Build --> RunTests[Run GoogleTest Binary]
+  RunTests --> FilterTests{Apply --gtest_filter?}
+  FilterTests -->|Yes| ParseFilter[Run selected tests]
+  FilterTests -->|No| RunAllTests[Run all tests]
+  ParseFilter --> GenerateReports[Generate XML/JSON outputs]
+  RunAllTests --> GenerateReports
+  GenerateReports --> PublishResults[Publish to CI Dashboard]
+  PublishResults --> Finish([End of Pipeline])
+  
+  subgraph IDE & Tools
+    VS_Code["VS Code GoogleTest Extension"]
+    VisualStudio["Visual Studio Test Explorer"]
+    CLI_Tools["Command-line & Parallel Runners"]
+  end
+
+  RunTests --> VS_Code
+  RunTests --> VisualStudio
+  RunTests --> CLI_Tools
+
+  classDef step fill:#bbf,stroke:#333,stroke-width:1px;
+  class Configure,FetchGTest,Build,RunTests,FilterTests,GenerateReports,PublishResults step;
 ```
 
-### Manual and Other Build Systems
-
-While CMake and Bazel are primary supported build systems, GoogleTest and GoogleMock can be manually integrated by including source files and headers directly. However, this approach requires careful attention to compiler flags, linkage, and platform-specific configurations.
-
-
 ---
 
-## Continuous Integration (CI) Pipeline Integration
+## Practical Tips for Smooth Integration
 
-GoogleTest and GoogleMock fit well into diverse CI setups:
-
-- **Command-line invocation:** The test runners are designed for command-line use, supporting filtering of tests, output styling, and detailed failures.
-- **Exit codes:** Following standard conventions, the test runner returns zero on success and non-zero on failure, making it easy to incorporate automated checks.
-- **Verbosity controls:** Users can configure log verbosity to fine-tune the feedback from test runs, for example using `--gmock_verbose=info|warning|error`.
-- **Cross-platform portability:** The framework supports Linux, Windows, macOS, BSD variants, and embedded systems, allowing consistent test execution across environments.
-
-
----
-
-## Cross-Platform Workflows
-
-GoogleTest and GoogleMock emphasize compatibility:
-
-- **Consistent API:** The user experience and APIs remain consistent regardless of platform.
-- **Compiler compatibility:** Requires C++17-compliant compilers with support for modern features.
-- **Macros and configuration:** Platform-specific macros identify OS and compiler for conditional compilation.
-- **Thread safety:** The framework supports multi-threaded tests safely when used according to guidelines.
-
-
----
-
-## Integration Hooks and Environment Configuration
-
-Users can customize integration and test behavior via:
-
-- **gtest and gmock initialization:** Use `testing::InitGoogleTest(&argc, argv)` or `testing::InitGoogleMock(&argc, argv)` in `main()` to parse test-related flags and initialize the framework.
-- **Flags:**
-  - `--gmock_verbose` controls how much detail logs produce.
-  - `--gtest_filter` lets you run subsets of tests.
-  - `--gmock_catch_leaked_mocks` controls mock leak detection.
-- **Mock strictness modifiers:**
-  - `NiceMock`, `NaggyMock`, and `StrictMock` wrappers provide varying strictness levels, affecting warning and error behavior for uninteresting mock calls.
-- **Mock object lifecycle:**
-  - Users can control verification timing via scoped destruction or explicit calls to `Mock::VerifyAndClearExpectations`.
-
-
----
-
-## Practical Recommendations and Best Practices
-
-- Prefer using `FetchContent` in CMake or the official Bazel targets to avoid manual source management.
-- Set up the default mock behaviors using `ON_CALL` and specify expectations with `EXPECT_CALL` to clarify intent.
-- Control verbosity during CI runs to reduce noise but keep enough detail for debugging failures.
-- Use `NiceMock` to suppress warnings on uninteresting calls during routine test runs, and `StrictMock` when needing precise call control.
-- Remember to call the appropriate initialization function (`InitGoogleMock` or `InitGoogleTest`) before running tests.
-
+- Always call `testing::InitGoogleTest(&argc, argv)` before `RUN_ALL_TESTS()` to initialize flags and environment.
+- Use CMake's `FetchContent` or add_subdirectory to keep GoogleTest in sync with your project’s toolchain.
+- Leverage `--gtest_output=xml` for consistent CI reporting.
+- Use `--gtest_filter` and test sharding capabilities to speed up large test suites.
+- Consider custom event listeners for specialized reporting needs or integration with proprietary tools.
+- Manage mock behavior carefully in multi-threaded contexts to avoid race conditions.
 
 ---
 
 ## Troubleshooting Integration Issues
 
-- Verify compiler compatibility with C++17 or higher.
-- Ensure proper linkage of gtest and gmock libraries.
-- Use the verbosity flags to capture detailed log information during test runs.
-- When integrating into complex build systems, confirm that the correct include paths and link flags are applied.
-- Confirm CI environment matches local environment for consistent test execution.
+- Linking errors often stem from missing or incompatible GoogleTest libraries – ensure correct linking as per your build system.
+- Misconfigured filters can lead to zero tests running; verify patterns comply with GoogleTest syntax.
+- Parallel execution may expose concurrency issues; isolate tests and leverage GoogleMock’s thread-safety guidelines.
 
+<br>
 
----
-
-## Diagram: Integration Flow with Build and CI Systems
-
-```mermaid
-flowchart TD
-  BuildSystem["Build System (CMake/Bazel/Other)"] -->|Includes GoogleTest & GoogleMock|Compilation["Compilation and Linking"]
-  Compilation --> TestExecutable["GoogleTest/GoogleMock Test Executable"]
-  TestExecutable -->|Executes| TestRunner["Test Runner"]
-  TestRunner -->|Processes CLI Flags| Init["InitGoogleTest / InitGoogleMock"]
-  TestRunner -->|Runs Tests| Tests["Test Suites & Mocks"]
-  Tests -->|Generates Results| Report["Test Results and Logs"]
-  Report --> CICD["Continuous Integration System"]
-  CICD -->|Reports Status| Devs["Developers"]
-
-  subgraph "Build Integrations"
-    BuildSystem
-    Compilation
-  end
-
-  subgraph "Test Execution"
-    TestExecutable
-    TestRunner
-    Init
-    Tests
-    Report
-  end
-
-  subgraph "CI Environment"
-    CICD
-    Devs
-  end
-
-  classDef buildStyle fill:#cfe2f3,stroke:#6c8ebf
-  classDef ciStyle fill:#d9ead3,stroke:#6aa84f
-  class BuildSystem,Compilation buildStyle
-  class CICD,Devs ciStyle
-```
-```
-
----
-
-For further details, see the official [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) and [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
-
+<AccordionGroup title="Common Integration Issues and Solutions">
+<Accordion title="Build Failures or Linker Errors">
+Check that GoogleTest libraries are correctly linked and built with your toolchain. For CMake, ensure `gtest` and `gtest_main` targets are included.
+</Accordion>
+<Accordion title="Tests Not Discovered or Running">
+Verify your naming conventions, that tests are registered, and your `--gtest_filter` does not exclude all tests.
+</Accordion>
+<Accordion title="Concurrency and Flaky Test Failures">
+Review use of shared resources; use synchronization primitives or isolate tests. GoogleTest and GoogleMock support concurrency but require correct usage.
+</Accordion>
+</AccordionGroup>
 
 ---
 
 ## Additional Resources
 
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Integration with Bazel](https://docs.bazel.build/versions/main/gcc.html#googletest) (external)
-- [CMake Integration](https://cmake.org/cmake/help/latest/module/FetchContent.html) (external)
+- [GoogleTest Primer](../overview/product-intro-and-value/what-is-googletest) – Getting started with basics.
+- [Integrating with CMake and Bazel](../guides/test-automation-and-integration/integrating-with-build-systems) – Practical build system integration.
+- [Running Tests in CI](../guides/test-automation-and-integration/running-tests-in-ci) – Automate running and reporting tests.
+- [GoogleMock and Thread Safety](../guides/mocking-and-advanced-testing/using-googlemock-effectively) – Best practices for mocking in concurrent contexts.
+- Official [GoogleTest GitHub Repository](https://github.com/google/googletest) – Source and samples.
 
 ---
 
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXX-Y"></script>
-
-
-
-
+Leveraging these patterns will embed GoogleTest naturally into your C++ development lifecycle, ensuring robust, scalable, and maintainable test automation.
